# toolify-rs

./: .clippy.toml  .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  PERF_CONTRACT.md  config.example.yaml  docker-compose.yaml
.github/workflows/: ghcr-minimum.yml  nightly-perf.yml
benches/: hot_path.rs  transcode.rs
scripts/: bench_alias_remap_wrk.sh  bench_fc_inject.sh  bench_fc_inject_wrk.sh  bench_forwarding.sh  bench_forwarding_wrk.sh  perf_alias_remap_single_core.sh  perf_dual_gate.sh  perf_recut_baseline.sh  perf_single_core_standard.sh  perf_suite.sh  perf_zero_regression_gate.sh  pgo_build.sh
src/: auth.rs  error.rs  json_scan.rs  lib.rs  main.rs  state.rs  util.rs
src/api/: health.rs  mod.rs  models.rs
src/api/common/: codec.rs  io.rs  mod.rs  non_streaming.rs  passthrough.rs  probe.rs  streaming.rs
src/api/engine/: fallback_common.rs  mod.rs  pipeline.rs
src/api/engine/channel_b/: core.rs
src/api/ingress/: mod.rs
src/config/: mod.rs  validation.rs
src/fc/: action.rs  detector.rs  inject.rs  mod.rs  parser.rs  parser_tests.rs  postprocess.rs  preprocess.rs  prompt.rs  retry.rs  validator.rs
src/observability/: mod.rs  token_counter.rs
src/protocol/: canonical.rs  error_shapes.rs  mapping.rs  mod.rs
src/protocol/anthropic/: decoder.rs  encoder.rs  mod.rs  response_decoder.rs  response_encoder.rs  stream.rs
src/protocol/gemini/: decoder.rs  encoder.rs  mod.rs  response_decoder.rs  response_encoder.rs  stream.rs
src/protocol/openai_chat/: decoder.rs  encoder.rs  mod.rs  response_decoder.rs  response_encoder.rs  stream.rs
src/protocol/openai_responses/: decoder.rs  encoder.rs  mod.rs  response_decoder.rs  response_encoder.rs  stream.rs
src/routing/: dispatch.rs  mod.rs  policy.rs  session.rs
src/state/: fc_policy.rs  models_cache.rs  request_id.rs  route_breaker.rs
src/stream/: mod.rs  sse.rs  transcoder.rs
src/transport/: http_transport.rs  mod.rs  prepared_upstream.rs  retry_policy.rs
tests/: auth.rs  fc_injection.rs  ingress_matrix.rs  openai_chat_forward.rs  protocol_matrix.rs  protocol_transcode.rs  state_policy.rs
tools/mock-openai-upstream/: Cargo.toml  README.md
tools/mock-openai-upstream/src/: main.rs
(+44 files in other folders)
