[package]
name = "mock_openai_upstream"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bytes = "1"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "service", "tokio", "http1", "http2"] }
tokio = { version = "1", features = ["rt", "macros", "net"] }
